--- a/index.html
+++ b/index.html
@@ -20,8 +20,22 @@
         </h1>
 
         <hr>
-        <div v-for="todo in todos">
-            <div class="alert alert-dismissible fade show" role="alert" v-bind:class="todo.type">{{todo.text}}
+
+        <todo-item
+            v-for="todo in todos"
+            v-bind:id="todo.id"
+            v-bind:text="todo.text"
+            v-bind:type="todo.type"
+            v-bind:tags="todo.tags"
+            v-bind:key="todo.id"
+        >
+        </todo-item>
+        
+        <!-- <div v-for="todo in todos">
+            <div class="alert alert-dismissible fade show" role="alert" v-bind:class="todo.type">
+                {{todo.id}}
+                <br>
+                {{todo.text}}
                 <div>
                     <template v-for="tag in todo.tags">
                         <span class="badge badge-secondary mr-2">{{tagToUpper(tag)}}</span></h1>
@@ -31,16 +45,79 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-        </div>
+        </div> -->
 
+        <input 
+            v-model="newTodo.text"
+            type="text" 
+            class="form-control mb-3" 
+            placeholder="Text of the TODO item"
+        >
+        <div class="form-group">
+            <select v-model="newTodo.type" class="form-control mb-3">
+                <option disabled>Please select one</option>
+                <option v-for="type in todoTypes" :value="type.value">
+                    {{ type.text }}
+                </option>
+              </select>
+        </div>
+        <div class="form-group">
+            <select v-model="newTodo.tags" multiple class="form-control mb-3">
+              <option disabled>Please select one</option>
+              <option v-for="tag in tagOptions">
+                {{ tag }}
+              </option>
+            </select>
+          </div>
+        <button
+            class="btn btn-success btn-block"
+            v-on:Click="addNewTodo"
+        >
+            Add TODO item
+        </button>
+
+        <hr class="my-5">
+
+        <input 
+        v-model="newTag"
+        type="text" 
+        class="form-control mb-3" 
+        placeholder="Content of the tag"
+        >
+        <button
+            class="btn btn-primary btn-block"
+            v-on:Click="addNewTag"
+        >
+            Add new tag
+        </button>
     </div>
-    <script>
+    <script type="module">
+        import TodoItem from './todo-item.js'
         const {createApp} = Vue
 
         createApp({
+            components: {
+                TodoItem
+            },
             data() {
                 return {
-                    todos: []
+                    todos: [],
+                    newTag: '',
+                    newTodo: {
+                        id: '',
+                        text: '',
+                        type: 'Please select one',
+                        tags: []
+                    },
+                    todoTypes: [
+                        {text: 'primary', value: 'alert-primary'},
+                        {text: 'danger', value: 'alert-danger'},
+                        {text: 'warning', value: 'alert-warning'},
+                        {text: 'success', value: 'alert-success'}
+                    ],
+                    tagOptions: [
+                        'new', 'urgent', 'pending', 'personal', 'work' 
+                    ]
                 }
             },
             computed: {
@@ -48,9 +125,9 @@
                     return this.todos.length
                 },
                 todoCounterColor() {
-                    if(this.todos.length > 4) {
+                    if(this.todos.length > 10) {
                         return 'badge-danger'
-                    } else if(this.todos.length > 3) {
+                    } else if(this.todos.length > 5) {
                         return 'badge-warning'
                     } else {
                         return 'badge-success'
@@ -68,10 +145,23 @@
                 deleteTodo(todoId) {
                     let index = this.todos.findIndex(x => x.id == todoId)
                     this.todos.splice(index, 1)
+                },
+                addNewTodo() {
+                    // input check
+                    this.newTodo.id = Math.floor(Math.random() * Date.now())
+                    this.todos.push(this.newTodo)
+                    this.newTodo = {
+                        text: '',
+                        type: 'Please select one',
+                        tags: []
+                    }
+                    // backend API call should be here
+                },
+                addNewTag() {
+                    this.tagOptions.push(this.newTag)
+                    this.newTag = ''
+                    // backend API call should be here
                 }
-                // todoCounter() {
-                //     return this.todos.length
-                // }
             },
             created() {
                 this.fetchData()
